--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-kairos-ui></app-kairos-ui>
+  <app-kairos-ui>Loading...</app-kairos-ui>
 </body>
 </html>
