--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <title>KairosUI</title>
   <base href="/">
-
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons" media="none"
+        onload="if(media!='all')media='all'" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
